--- a/index.html
+++ b/index.html
@@ -7,17 +7,7 @@
 <body>
 <div id="appDiv">App will load here.</div>
 
-<script src="https://fb.me/react-15.0.0.js"></script>
-<script src="https://fb.me/react-dom-15.0.0.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+<script src="dist/sample.bundle.js"></script>
 
-<script type="text/babel">
-var Greeting = React.createClass({
-  render: function() {
-    return <p>Hello, Universe</p>;
-  }
-});
-ReactDOM.render(<Greeting />, document.getElementById('appDiv'));
-</script>
 </body>
 </html>
